syntax = "proto3";

package haqq.dao.v1;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "amino/amino.proto";
import "haqq/dao/v1/dao.proto";

option go_package = "github.com/haqq-network/haqq/x/dao/types";

// GenesisState defines the gov module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];

  // balances is an array containing the balances of all the dao members' accounts.
  repeated Balance balances = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];

  // total_balance represents the total balance of the dao module. If it is left empty, then supply will be calculated based on the provided
  // balances. Otherwise, it will be used to validate that the sum of the balances equals this amount.
  repeated cosmos.base.v1beta1.Coin total_balance = 3 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable)     = false,
    (amino.dont_omitempty)   = true
  ];
}

// Balance defines an account address and balance pair used in the bank module's
// genesis state.
message Balance {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  // address is the address of the balance holder.
  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // coins defines the different coins this balance holds.
  repeated cosmos.base.v1beta1.Coin coins = 2 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable)     = false,
    (amino.dont_omitempty)   = true
  ];
}
